XWIKI-11583: Fix the right-management livetable on mobile.
* Better livetable

--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/less/livetable.less
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/less/livetable.less
@@ -107,5 +107,13 @@
         }
       }
     }
+
+    // Overwrite XWiki.AdminSheet
+    #userstable, #groupstable, #usersandgroupstable, #alldocstable { 
+      .xwiki-livetable-display-body td {
+        border-color: @table-border-color;
+        width: 100%;
+      }
+    }
   }
 }
